Fixed avatar alignment and hiding on select.

--- a/style.less
+++ b/style.less
@@ -72,8 +72,9 @@ ul.users .avatar {
 	-webkit-transition: all .5s linear;
 }
 
-ul.users.single .avatar { display:none; }
-ul.users.single .avatar.active { display:inline-block; }
+ul.users.single .avatar { width: 0px; margin: 0; opacity: 0; }
+ul.users.single .avatar.active { display:inline-block; width: 110px; margin: 0 10px; opacity: 1; }
+
 ul.users.single form { display:block; opacity: 1; }
 
 .avatar {
@@ -82,6 +83,7 @@ ul.users.single form { display:block; opacity: 1; }
 	height: 140px;
 	margin: 0 10px;
 	display: inline-block;
+	-webkit-transition: all 1s;
 }
 
 .avatar > span.uid {
